--- a/frontend/src/components/style.component/Footer.module.css
+++ b/frontend/src/components/style.component/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #ffffff;
+    background-color: #DCDCDC;
     color: #333333;
     padding: 30px 0 10px;
     font-family: 'Roboto', sans-serif;
