--- a/frontend/src/components/style.component/Cart.module.css
+++ b/frontend/src/components/style.component/Cart.module.css
@@ -143,9 +143,9 @@
   transition: all 0.3s ease;
   font-size: 15px;
   font-weight: 500;
-  display: flex;
   align-items: center;
   gap: 8px;
+  width: 100px;
 }
 
 .removeButton:hover {
