--- a/frontend/src/components/style.component/PurchaseOrderManagement.module.css
+++ b/frontend/src/components/style.component/PurchaseOrderManagement.module.css
@@ -1,13 +1,13 @@
 /* Container for Purchase Order Management */
 .purchaseOrderManagement {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
-  padding: 30px;
-  background: linear-gradient(135deg, #8b0000, #000000); /* Dark red to black gradient */
+  padding: 20px;
+  background: linear-gradient(135deg, #000000, #000000); /* Dark red to black gradient */
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease-in-out;
-  color: #fff;
+  color: #fff;  
   font-family: "Times New Roman", Times, serif;
 }
 
@@ -91,7 +91,7 @@ h2 {
 }
 
 .createOrderForm button {
-  background-color: #ff0000;
+  background-color: #0dc807;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -149,7 +149,7 @@ h2 {
 
 .orderTable input[type="number"]:focus,
 .orderTable input[type="text"]:focus {
-  border-color: #ff0000;
+  border-color: #98e493;
 }
 
 .orderTable button {
@@ -163,17 +163,17 @@ h2 {
 }
 
 .orderTable button:first-of-type {
-  background-color: #ff4444;
+  background-color: #08b71a;
   color: white;
 }
 
 .orderTable button:first-of-type:hover {
-  background-color: #cc0000;
+  background-color: #027e1f;
   transform: translateY(-2px);
 }
 
 .orderTable button:nth-of-type(2) {
-  background-color: #d32f2f;
+  background-color: #0c123b;
   color: white;
 }
 
@@ -183,12 +183,12 @@ h2 {
 }
 
 .orderTable button:last-of-type {
-  background-color: #990000;
+  background-color: #437cf9;
   color: white;
 }
 
 .orderTable button:last-of-type:hover {
-  background-color: #660000;
+  background-color: #181b77;
   transform: translateY(-2px);
 }
 
