--- a/frontend/src/components/style.component/Register.module.css
+++ b/frontend/src/components/style.component/Register.module.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('D:\phone-store-online\frontend\public\images\4.jpg') no-repeat center center/cover;
+    background: url('D:\STORE_PHONE\phone-store-online\frontend\public\images\8.jpg') no-repeat center center/cover;
     background-size: no-repeat;  /* Giúp hình nền phủ đầy mà không méo */
 
 }
