--- a/frontend/src/components/style.component/UserManagement.module.css
+++ b/frontend/src/components/style.component/UserManagement.module.css
@@ -1,5 +1,5 @@
-/* Reset Password Page */
-.resetPasswordPage {
+  /* Reset Password Page */
+  .resetPasswordPage {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,8 +7,8 @@
     background-color: #1a1a1a;
     font-family: "Playfair Display", serif;
   }
-  
-  .resetPasswordContainer {
+ 
+  .resetPasswordContainer { 
     width: 90%;
     max-width: 500px;
     background-color: #262626;
@@ -178,9 +178,9 @@
   .userTable th {
     background-color: #333333;
     font-weight: bold;
-    color: #ff0000;
+    color: #ffffff;
     cursor: pointer;
-    font-family: "Playfair Display", serif;
+    
   }
   
   .userTable td {
